# RobotWorkspace

./: .gitignore  run.sh
.github/workflows/: main.yaml
src/: CMakeLists.txt
src/comm/: CMakeLists.txt  package.xml
src/comm/include/comm/: motor.hpp  rs232.h  stm.hpp
src/comm/src/: comm_motor.cpp  rs232.c
src/helpers/: CMakeLists.txt  package.xml
src/helpers/include/global/: global.hpp
src/helpers/include/helper/: helper.hpp
src/helpers/include/logger/: logger.hpp
src/helpers/include/math/: potential_field.hpp  simple_math.hpp
src/helpers/include/math/potential_field/: vector_attractive.h  vector_repulsive.h
src/helpers/include/pid/: pid.hpp
src/helpers/include/vision_helper/: vision_helper.hpp
src/helpers/src/: global.cpp  helper.cpp  pid.cpp  potential_field.cpp  simple_math.cpp  vision_helper.cpp
src/master/: CMakeLists.txt  package.xml
src/master/include/master/: master.hpp
src/master/launch/: master.launch
src/master/src/: master.cpp
src/master/www/react_code/: go_to_server.sh  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
src/master/www/react_code/src/: App.jsx
src/master/www/react_code/src/assets/: index.d.ts  index.tsx
src/master/www/react_code/src/components/: Ball.jsx  Field.jsx  Line.jsx  Navbar.jsx
src/master/www/react_code/src/static/: Vars.jsx
src/motion/: CMakeLists.txt  package.xml
src/motion/include/motion/: motion.hpp
src/motion/src/: motion.cpp
src/msg_collection/: CMakeLists.txt  package.xml
src/msg_collection/msg/: encMotor.msg  stmToPc.msg
src/msg_collection/srv/: ThresholdVision.srv
src/multirole/: CMakeLists.txt  package.xml
src/multirole/include/multirole/: multirole.h
src/multirole/src/: multirole.cpp
src/role_assist/: CMakeLists.txt  package.xml
src/role_attacker/: CMakeLists.txt  package.xml
src/role_attacker/include/role_attacker/: role_attacker.hpp
src/role_attacker/src/: role_attacker.cpp
src/role_goalkeeper/: CMakeLists.txt  package.xml
src/vision/: CMakeLists.txt  package.xml
src/vision/include/capture/: capture.hpp
src/vision/include/main/: main.hpp
src/vision/src/: capture.cpp  main.cpp
